--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "a little node js",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -16,5 +17,8 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "mongoose": "^5.9.18"
+  },
+  "engines": {
+    "node": "12.18.0"
   }
 }
